--- a/main.tex
+++ b/main.tex
@@ -121,8 +121,8 @@ memory one strategy and a more complex strategy which has a larger memory, and a
 identification of conditions for which defection is known to be stable; thus
 identifying environments where cooperation will not occur.
 
-\section*{Methods and Results}
-\subsection*{Utility}
+\section{Methods and Results}
+\subsection{Utility}
 
 One specific advantage of memory-one strategies is their mathematical
 tractability. They can be represented completely as an element of \(\R^{4}_{[0, 1]}\). This
@@ -190,7 +190,7 @@ It will be used to obtain best response memory-one strategies, in tournaments
 and evolutionary dynamics, and to explore the conditions under which defection
 dominates cooperation.
 
-\subsection*{Stability of defection}\label{subsection:stability_defection}
+\subsection{Stability of defection}\label{subsection:stability_defection}
 
 An immediate result from our formulation can be
 obtained by evaluating the sign of Eq. \ref{eq:tournament_utility}'s derivative
@@ -255,7 +255,7 @@ source research framework for the study of the IPD.
     and Defector does not take over the population.}\label{fig:stability_of_defection}
 \end{figure}
 
-\subsection*{Best response memory-one strategies}
+\subsection{Best response memory-one strategies}
 
 As discussed ZDs have been acclaimed for their robustness
 against a single opponent. ZDs are evidence that extortion works
@@ -405,7 +405,7 @@ occur.
     \label{fig:behaviour_violin_plots}
 \end{figure}
 
-\subsection*{Longer memory best responses}
+\subsection{Longer memory best responses}
 
 This section focuses on the memory size of strategies. The effectiveness of
 memory in the IPD has been previously explored in the literature, however, no one
@@ -466,7 +466,7 @@ shorter memory is limiting.
     strategy for 152 different pair of opponents.}\label{fig:utilities_gambler_mem_one}
 \end{figure}
 
-\section*{Discussion}
+\section{Discussion}
 This manuscript has considered \textit{best response} strategies in the IPD game, and
 more specifically, \textit{memory-one best responses}. It has proven that there is
 a compact way of identifying a memory-one best response to a group of opponents,
@@ -521,7 +521,7 @@ the optimal strategy for a variety of situations, this work casts doubt
 on the effectiveness of ZDs, highlights the importance of adaptability and provides
 a framework for the continued understanding of these important questions.
 
-\section*{Acknowledgements}
+\section{Acknowledgements}
 
 A variety of software libraries have been used in this work,
 the Axelrod library for IPD simulations~\cite{axelrodproject},
@@ -534,9 +534,9 @@ the Numpy library for data manipulation~\cite{walt2011numpy}.
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
 
-\section*{Appendix}
+\section{Appendix}
 
-\subsection*{Theorem~\ref{theorem_one}}
+\subsection{Theorem~\ref{theorem_one}}
 \begin{theorem}\label{theorem_one}
 
     The expected utility of a memory-one strategy \(p\in\mathbb{R}_{[0,1]}^4\)
@@ -698,7 +698,7 @@ the Numpy library for data manipulation~\cite{walt2011numpy}.
     The same process is done for the denominator.
 \end{proof}
 
-\subsection*{Theorem~\ref{memone_group_best_response}}
+\subsection{Theorem~\ref{memone_group_best_response}}
 \begin{theorem}\label{memone_group_best_response}
 
 The optimal behaviour of a memory-one strategy player
