ackow as bullet points

--- a/main.tex
+++ b/main.tex
@@ -524,12 +524,15 @@ a framework for the continued understanding of these important questions.
 
 \section{Acknowledgements}
 
-A variety of software libraries have been used in this work,
-the Axelrod library for IPD simulations~\cite{axelrodproject},
-the Scikit-optimize library for an implementation of Bayesian optimisation~\cite{tim_head_2018_1207017},
-the Matplotlib library for visualisation~\cite{hunter2007matplotlib},
-the SymPy library for symbolic mathematics~\cite{sympy} and
-the Numpy library for data manipulation~\cite{walt2011numpy}.
+A variety of software libraries have been used in this work:
+
+\begin{itemize}
+    \item The Axelrod library for IPD simulations~\cite{axelrodproject}.
+    \item The Scikit-optimize library for an implementation of Bayesian optimisation~\cite{tim_head_2018_1207017}.
+    \item The Matplotlib library for visualisation~\cite{hunter2007matplotlib}.
+    \item The SymPy library for symbolic mathematics~\cite{sympy}.
+    \item The Numpy library for data manipulation~\cite{walt2011numpy}.
+\end{itemize}
 
 % Bibliography
 \bibliographystyle{plain}
