adds references proposed by pnas editor and includes discussion

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -465,3 +465,42 @@ author = "Matsui, Akihiko",
   doi          = {10.5281/zenodo.3533146},
   url          = {https://doi.org/10.5281/zenodo.3533146}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SIMILAR WORKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Hilbe2017,
+  title={Memory-n strategies of direct reciprocity},
+  author={Hilbe, Christian and Martinez-Vaquero, Luis A and Chatterjee, Krishnendu and Nowak, Martin A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={18},
+  pages={4715--4720},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+@article{Stewart2016,
+  title={Small groups and long memories promote cooperation},
+  author={Stewart, Alexander J and Plotkin, Joshua B},
+  journal={Scientific reports},
+  volume={6},
+  pages={26889},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{Pan2015,
+  title={Zero-determinant strategies in iterated public goods game},
+  author={Pan, Liming and Hao, Dong and Rong, Zhihai and Zhou, Tao},
+  journal={Scientific reports},
+  volume={5},
+  pages={13096},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+@article{Stewart2013,
+  title={From extortion to generosity, evolution in the iterated prisoner’s dilemma},
+  author={Stewart, Alexander J and Plotkin, Joshua B},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={110},
+  number={38},
+  pages={15348--15353},
+  year={2013},
+  publisher={National Acad Sciences}
+}
