--- a/main.tex
+++ b/main.tex
@@ -460,6 +460,7 @@ the optimal memory-one strategy. This is evidence that in the case of two oppone
 shorter memory is limiting and this is potentially another example of the advantages
 of adaptability.
 
+
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=.5\textwidth]{img/gambler_performance_against_mem_one.pdf}
@@ -469,16 +470,22 @@ of adaptability.
 
 \section{Discussion}
 This manuscript has considered \textit{best response} strategies in the IPD game, and
-more specifically, \textit{memory-one best responses}. It has proven that there is
-a compact way of identifying a memory-one best response to a group of opponents,
-and moreover it obtained a condition for which in an
+more specifically, \textit{memory-one best responses}. It presents a series of novel
+results which include proving that there is a compact way of identifying a memory-one best response to a group of opponents,
+and moreover obtaining a condition for which in an
 environment of memory-one opponents defection is the stable choice, based only
 on the coefficients of the opponents.
 The later parts of this paper focused on a series of empirical results, where it
 was shown that the performance and the evolutionary stability of memory-one
-strategies rely on adaptability and not on extortion. Finally, it was shown that
+strategies rely on adaptability and not on extortion, and that
 memory-one strategies' performance is limited by their memory in cases where
-they interact with multiple opponents.
+they interact with multiple opponents. These results have been
+noted before~\cite{Hilbe2017, Pan2015, Stewart2013, Stewart2016}.
+However, by specifically exploring the entire memory space-one strategies to
+identify the optimal strategy for a variety of situations, this work hopes to
+contribute to the discussion on the effectiveness of ZDs and on the
+importance of adaptability, and to provide a framework for the continued
+understanding of these important questions.
 
 Following the work described in~\cite{Nowak1989}, where it was shown that the
 utility between two memory-one strategies can be estimated by a Markov
@@ -516,11 +523,6 @@ believe that for larger values of $N$ the results that have been presented here
 would only be more evident. In addition, we would investigate potential
 theoretical results for the evolutionary best responses dynamics algorithm
 discussed.
-
-By specifically exploring the entire memory space-one strategies to identify
-the optimal strategy for a variety of situations, this work casts doubt
-on the effectiveness of ZDs, highlights the importance of adaptability and provides
-a framework for the continued understanding of these important questions.
 
 \section{Acknowledgements}
 
