address reviewers comment

--- a/main.tex
+++ b/main.tex
@@ -112,7 +112,13 @@ In a similar fashion to~\cite{Press2012} the purpose of this work is to consider
 a given memory-one strategy; however, whilst~\cite{Press2012} found a way for a
 player to manipulate a given opponent, this work will consider a
 multidimensional optimisation approach to identify the best response to a given
-group of opponents. In particular, this work presents a compact method of
+group of opponents. The outcomes of our work reinforce known results, namely
+that memory-one strategies must be forgiving to be evolutionarily stable~\cite{Stewart2013, Stewart2016}
+and that longer-memory strategies have a certain form of advantage over short memory
+strategies~\cite{Hilbe2017, Pan2015}.
+
+
+In particular, this work presents a compact method of
 identifying the best response memory-one strategy against a given set of
 opponents, and evaluates whether it behaves in a
 zero-determinant way which in turn indicates whether it can be extortionate. This is also done in evolutionary settings. Moreover, we
