--- a/main.tex
+++ b/main.tex
@@ -123,9 +123,9 @@ identifying the best response memory-one strategy against a given set of
 opponents, and evaluates whether it behaves in a
 zero-determinant way which in turn indicates whether it can be extortionate. This is also done in evolutionary settings. Moreover, we
 introduce a well designed framework that allows the comparison of an optimal
-memory one strategy and a more complex strategy which has a larger memory, and an
-identification of conditions for which defection is known to be stable; thus
-identifying environments where cooperation will not occur.
+memory one strategy and a more complex strategy which has a larger memory. This
+is used to identify conditions for which defection is stable; thus identifying
+environments where cooperation will not occur.
 
 \section{Methods and Results}
 \subsection{Utility}
@@ -148,7 +148,7 @@ can be modeled as a stochastic process, and more specifically as a Markov chain
 whose corresponding transition matrix \(M\) is
 given by Eq.~\ref{eq:transition_matrix}. The long run steady state probability
 vector \(v\), which is the solution to \(v M = v\), can be
-combined with the payoff matrices of Ep.~\ref{equ:pd_definition} to give the expected
+combined with the payoff matrices of Eq.~\ref{equ:pd_definition} to give the expected
 payoffs for each player. More specifically, the utility for a memory-one
 strategy \(p\) against an opponent \(q\), denoted as \(u_q(p)\), is given by
 Eq.~\ref{eq:press_dyson_utility}.
@@ -261,7 +261,7 @@ source research framework for the study of the IPD.
     and Defector does not take over the population.}\label{fig:stability_of_defection}
 \end{figure}
 
-\subsection{Best response memory-one strategies}
+\subsection{Best response memory-one strategies}\label{section:best_response_memory_one}
 
 As discussed ZDs have been acclaimed for their robustness
 against a single opponent. ZDs are evidence that extortion works
@@ -345,7 +345,7 @@ corresponding to 1000 different instances of a best response strategy in
 tournaments and evolutionary dynamics. For each trial a set of 2 opponents is
 randomly generated and the memory-one best responses against them is found.
 
-The source code used in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
+The source code for the experiments presented in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
 It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
 and tested which ensures the validity of the results. It has also been archived
 and can be found at~\cite{nikoleta_glynatsi_2019}.
@@ -451,14 +451,14 @@ at~\cite{glynatsi2019}. Estimating a best response Gambler (17 dimensions) is
 computational more expensive compared to a best response memory-one (4
 dimensions). As a result, the analysis of this section is based on a total of
 152 trials. For each trial two random opponents have been selected. The 152 pair
-of opponents are a sub set of the opponents used in the previous section.
+of opponents are a sub set of the opponents used in section~\ref{section:best_response_memory_one}.
 
 The ratio between Gambler's utility and the best response memory-one strategy's utility has been calculated and its distribution in
 given in Fig.~\ref{fig:utilities_gambler_mem_one}.
 It is evident from Fig.~\ref{fig:utilities_gambler_mem_one} that
 Gambler always performs as well as the best response memory-one strategy and often performs better. There are
 no points where the ratio value is less than 1, thus Gambler never performed less
-than the best response memory-one strategy. This seems to be at odd with the
+than the best response memory-one strategy and in places outperforms it. This seems to be at odd with the
 result of~\cite{Press2012} that against a memory-one opponent having a longer memory
 will not give a strategy any
 advantage. However, against two memory-one opponents Gambler's performance is better than
